[package]
name = "obel_physics"
version = "0.0.0"
description = "Provides the feature"
keywords = ["obel", "obel_physics"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[dependencies]

[dev-dependencies]
static_assertions = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true

[badges]
maintenance = { status = "actively-developed" }
