[badges]
maintenance = { status = "actively-developed" }
[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true

[package]
name = "obel_physics"
version = "0.0.3"
description = "Provides the feature"
keywords = ["obel", "obel_physics"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
