[badges]
maintenance = { status = "actively-developed" }
[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true

[package]
name = "obel_scene"
version = "0.0.7"
description = "Provides scene to organize game objects"
keywords = ["obel", "obel_engine", "obel_scene"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"

[dependencies]

[dev-dependencies]
static_assertions = { workspace = true }
