[package]
name = "obel_ecs_macros"
version = "0.0.9"
description = "Provides core App functionality"
keywords = ["obel", "obel_engine", "obel_ecs", "obel_ecs_macros"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["std"]

std = ["alloc"]
alloc = []

[dependencies]
obel_reflect_utils = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true

[badges]
maintenance = { status = "actively-developed" }
