
[badges]
maintenance = { status = "actively-developed" }
[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true

[package]
name = "obel_reflect_complie_test"
version = "0.0.1"
publish = false
description = "Compile fail tests for Obel Engine's reflection system"
keywords = ["obel", "obel_reflect_complie_test"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[dev-dependencies]
obel_ui_test_runner = { workspace = true }
static_assertions = { workspace = true }

[dependencies]
obel_reflect_derive = { workspace = true, features = ["functions"] }

[[test]]
name = "derive"
harness = false
