[badges]
maintenance = { status = "actively-developed" }
[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true

[lib]
proc-macro = true

[package]
name = "obel_reflect_derive"
version = "0.0.9"
description = "Provide the macro derives fro obel_reflect"
keywords = ["obel", "obel_engine", "obel_reflect_derive"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"

[features]
# Features
## When enabled, allows documentation comments to be accessed via reflection
documentation = []
## Enables function reflection
functions = []

[dependencies]
obel_reflect_utils = { workspace = true }
obel_platform = { workspace = true, features = ["alloc"] }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
