[badges]
maintenance = { status = "actively-developed" }
[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true

[package]
name = "obel_reflect_utils"
version = "0.0.9"
description = "Provide the token utils fro obel_reflect"
keywords = ["obel", "obel_engine", "obel_reflect_utils"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"

[dependencies]
obel_platform = { workspace = true, features = ["std"] }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
toml_edit = { workspace = true, features = ["parse"] }

[dev-dependencies]
tempfile = { workspace = true }
